# women_books

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_eda.ipynb  01_gender_classification.ipynb  02_gender_classification-try1.ipynb
