[tool.poetry]
name = "women-books"
version = "0.1.0"
description = ""
authors = ["Plaksa <plaksacarp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.11"
ipywidgets = "^8.1.1"
pandas = "^2.1.4"
numpy = "^1.26.3"
openpyxl = "^3.1.2"
pyarrow = "^14.0.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
